# llm-vulnbench

./: .gitignore  ARCHITECTURE.md  CONTRIBUTORS.md  LICENSE  README.md  claude.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
deploy/: README.md  docker-compose.yml
tests/: test_a1_agents.py  test_c1_llm_semgrep.py  test_c2_llm_zap.py  test_c3_llm_rules.py  test_checkpoint.py  test_cli.py  test_conditions_registry.py  test_harness.py  test_harness_e2e.py  test_listmatch.py  test_llm_common.py  test_models.py  test_report.py  test_schema.py  test_scoring.py  test_semgrep_parse.py  test_suite.py  test_theme.py  test_tools.py  test_tui.py  test_wizard.py  test_zap_runner.py
vulnbench/: __init__.py  checkpoint.py  cli.py  harness.py  report.py  schema.py  suite.py  targets.toml  theme.py  tools.py  tui.py  wizard.py
vulnbench/conditions/: __init__.py  a1_agents.py  b1_semgrep.py  b2_zap.py  b3_llm.py  base.py  c1_llm_semgrep.py  c2_llm_zap.py  c3_llm_rules.py  llm_common.py  source_files.py  stubs.py
vulnbench/corpus/: __init__.py  target.py
vulnbench/models/: __init__.py  anthropic_backend.py  base.py  mock_backend.py  ollama_backend.py  registry.py
vulnbench/scanners/: __init__.py  benchmark_crawl.py  semgrep_runner.py  zap_runner.py
vulnbench/scoring/: __init__.py  benchmark.py  listmatch.py  metrics.py  metrics_unifier.py  owasp_benchmark.py  webapps_benchmark.py
