[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnbench"
# Version is single-sourced from vulnbench/__init__.py (__version__): the harness
# stamps it into scorecard provenance, so code is the natural home for it.
dynamic = ["version"]
description = "Benchmark harness for LLM-augmented web vulnerability detection (SAST/DAST/LLM conditions, shared scoring)."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Advait Sangle", email = "asangle@uwaterloo.ca" }]
keywords = ["security", "benchmark", "llm", "sast", "dast", "vulnerability-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    # Stdlib-only core. Backends/scanners shell out or use HTTP via urllib,
    # so the harness imports and runs with zero third-party deps installed.
    # Optional extras below enable richer backends.
]

[project.urls]
Repository = "https://github.com/advaitsangle/llm-vulnbench"
Issues = "https://github.com/advaitsangle/llm-vulnbench/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
pretty = ["rich>=13"]
dev = ["pytest>=8", "ruff>=0.5", "rich>=13"]

[project.scripts]
vulnbench = "vulnbench.cli:main"

[tool.setuptools.dynamic]
version = { attr = "vulnbench.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["vulnbench*"]

[tool.setuptools.package-data]
vulnbench = ["targets.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# B008: false positives on dataclass field(default_factory=...) are not an issue here.

[tool.ruff.lint.per-file-ignores]
# Tests favor readability over import-order and long inline JSON fixtures.
"tests/*" = ["E501"]
